--- a/filippo/build.gradle
+++ b/filippo/build.gradle
@@ -3,11 +3,8 @@
 dependencies {
     compile(
 
-            "commons-dbcp:commons-dbcp:1.4",
             "net.sourceforge.javacsv:javacsv:2.0",
-            project(':project-common'),
             project(':iog-common-product'),
-            project(':filippo-stock')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
@@ -16,18 +13,18 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
 
 
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+//    def manifestCp = configurations.compile.files.collect  {
+//        File file = it
+//        "lib/${file.name}"
+//    }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.filippo.StartUp'
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+//        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 
 }
