--- a/meifeng-stock/build.gradle
+++ b/meifeng-stock/build.gradle
@@ -15,7 +15,7 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
 
 
@@ -25,7 +25,7 @@ jar {
 //    }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.meifeng.stock.StockClientImp'
+        attributes 'Main-Class': 'com.shangpin.iog.meifeng.stock.Startup'
 //        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 
