--- a/smets/build.gradle
+++ b/smets/build.gradle
@@ -1,6 +1,9 @@
 dependencies {
     compile(
             "org.jsoup:jsoup:1.8.3",
+              "com.google.code.gson:gson:2.2.2",
+            "org.apache.poi:poi:3.13",
+            "org.apache.poi:poi-ooxml:3.13",
             project(':iog-common-product')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
