--- a/iog-web-container/src/main/resources/conf.properties
+++ b/iog-web-container/src/main/resources/conf.properties
@@ -11,7 +11,7 @@ to=joyce.xia@shangpin.com
 subject=\u4EF7\u683C\u53D1\u751F\u53D8\u5316\u7684\u4EA7\u54C1\u5217\u8868
 messageType=text/html;charset\=utf-8
 
-
+host=172.20.10.127
 
 #######################every day new fetched products' quataty#########################################
 dailyUpdateProductSchedule=0 30 8 * * ?
