--- a/CodeGenrate/build.gradle
+++ b/CodeGenrate/build.gradle
@@ -2,7 +2,7 @@
 
 dependencies {
     compile(
-		"org.freemarker:freemarker:2.3.16",
+		"org.freemarker:freemarker:2.3.16"
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
