--- a/stefaniamode/build.gradle
+++ b/stefaniamode/build.gradle
@@ -1,8 +1,7 @@
 dependencies {
     compile(
-            project(':project-common'),
-            project(':project-dao'),
-            project(':iog-common-product')
+            project(':iog-common-product'),
+            project(':iog-product-framework'),
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
@@ -21,7 +20,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.stefaniamode.Startup'
+        attributes 'Main-Class': 'com.shangpin.iog.stefaniamode.service.StefanFrameFetchProduct'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
