--- a/bagheera-stock/build.gradle
+++ b/bagheera-stock/build.gradle
@@ -20,7 +20,7 @@ jar {
 //    }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.bagheera.stock.StockClientImp'
+        attributes 'Main-Class': 'com.shangpin.iog.bagheera.schedule.Startup'
 //        attributes 'Class-Path': '. ./conf/ ' +  manifestCp
     }
 }
