--- a/fashionesta-stock/build.gradle
+++ b/fashionesta-stock/build.gradle
@@ -25,7 +25,7 @@ jar {
 
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.fashionesta.stock.StockClientImp'
+        attributes 'Main-Class': 'com.shangpin.iog.fashionesta.stock.schedule.Startup'
 
 //        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
