--- a/fashionesta-stock/src/main/resources/conf.properties
+++ b/fashionesta-stock/src/main/resources/conf.properties
@@ -1,4 +1,5 @@
 path=/usr/local/appstock/fashionesta/fashionesta
 url=http://integration.fashionesta.eu/shangpinmasterdata.csv
 supplierId=2015092901556
-  #201509281616
+jobsSchedule=30 30 0/1 * * ? 
+time=5400000
