--- a/filippo-stock/build.gradle
+++ b/filippo-stock/build.gradle
@@ -11,20 +11,20 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
 
-    def manifestCp = configurations.compile.files.collect  {
-
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+//    def manifestCp = configurations.compile.files.collect  {
+//
+//        File file = it
+//        "lib/${file.name}"
+//    }.join(' ')
 
 
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.filippo.stock.StockClientImp'
+        attributes 'Main-Class': 'com.shangpin.iog.filippo.stock.schedule.Startup'
 
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+//        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
