--- a/forzieri-stock/build.gradle
+++ b/forzieri-stock/build.gradle
@@ -1,18 +1,6 @@
-
-
-
-
-def propertyPath =    "$buildDir/libs/conf"
-
 dependencies {
     compile(
-            "org.mybatis:mybatis:3.2.2",
-            "org.mybatis:mybatis-spring:1.2.0",
-            "mysql:mysql-connector-java:5.1.21",
-            "commons-dbcp:commons-dbcp:1.4",
             "net.sourceforge.javacsv:javacsv:2.0",
-            project(':project-common'),
-            project(':project-dao'),
             project(':iog-common-product'),
             project(':openapi-ice'),
     )
@@ -23,20 +11,20 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
 
-    def manifestCp = configurations.compile.files.collect  {
-
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
-
+//    def manifestCp = configurations.compile.files.collect  {
+//
+//        File file = it
+//        "lib/${file.name}"
+//    }.join(' ')
+//
 
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.forzieri.stock.StockClientImp'
+        attributes 'Main-Class': 'com.shangpin.iog.forzieri.stock.schedule.Startup'
 
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+//        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
