--- a/dante5-stock/build.gradle
+++ b/dante5-stock/build.gradle
@@ -16,7 +16,7 @@ jar {
     exclude ("**/*.properties")
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.dante5.stock.schedule.Startup'
+        attributes 'Main-Class': 'com.shangpin.iog.dante5.stock.GrabStockImp'
     }
 }
 
