--- a/efashion/build.gradle
+++ b/efashion/build.gradle
@@ -16,11 +16,9 @@ dependencies {
             project(':iog-service'),
             project(':project-dao'),
             project(':iog-common-product'),
+              project(':iog-product-framework'),
             project(':openapi-ice')
     )
-
-
-
 }
 
 jar {
@@ -29,7 +27,7 @@ jar {
     exclude ("**/*.properties")
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.efashion.StartSkuJob'
+        attributes 'Main-Class': 'com.shangpin.iog.efashion.service.efashionFrameFetchProduct'
     }
 
 }
