--- a/efashion/src/main/resources/conf.properties
+++ b/efashion/src/main/resources/conf.properties
@@ -1,4 +1,5 @@
-supplierId=2015111001657
+supplierId=201511100165712
 url=http://api.gebnegozi.com/api/v2/all/products/info.json?storeCode=DW3LT
+picpath=C://pic//
 max=500
 day=90
