--- a/smets-stock/build.gradle
+++ b/smets-stock/build.gradle
@@ -2,13 +2,10 @@
 
 dependencies {
     compile(
-
-            "commons-dbcp:commons-dbcp:1.4",
             "net.sourceforge.javacsv:javacsv:2.0",
             project(':openapi-ice'),
             project(':iog-common-product'),
             "commons-net:commons-net:3.3",
-			project(':iog-sop')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
@@ -17,18 +14,18 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
 
-
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+//
+//    def manifestCp = configurations.compile.files.collect  {
+//        File file = it
+//        "lib/${file.name}"
+//    }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.smets.stock.StockClientImp'
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+        attributes 'Main-Class': 'com.shangpin.iog.smets.stock.schedule.Startup'
+//        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 
 }
