--- a/pozzilei-order/build.gradle
+++ b/pozzilei-order/build.gradle
@@ -14,7 +14,7 @@ dependencies {
 
 }
 jar {
-    dependsOn copyToLib, copyResources
+    dependsOn copyToLib, copyResources,copyResourcesToClasses
     exclude ("**/*.properties")
 
     def manifestCp = configurations.compile.files.collect  {
