--- a/sarenza/src/main/resources/conf.properties
+++ b/sarenza/src/main/resources/conf.properties
@@ -1,6 +1,6 @@
-supplierId=2016042901876 
+supplierId=2016042901876
 day=90
-#path=/usr/localhost/app/sarenza
-path=C://test
+path=/usr/local/applications/appfetch/sarenza
+#path=C://test
 
 
