--- a/pozzilei/build.gradle
+++ b/pozzilei/build.gradle
@@ -24,13 +24,13 @@ jar {
  	dependsOn copyToLib, copyResources,dependsClassPath
     exclude ("**/*.properties")
 
-    //def manifestCp = configurations.compile.files.collect  {
-    //    File file = it
-    //    "lib/${file.name}"
-    //}.join(' ')
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.pozzilei.service.PozzileiFrameFetchProduct'
-    //    attributes 'Class-Path': '. ./conf/  ' + manifestCp
+      attributes 'Class-Path': '. ./conf/  ' + manifestCp
     }
 }
