--- a/russoCapri/build.gradle
+++ b/russoCapri/build.gradle
@@ -20,7 +20,7 @@ jar {
   //  }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.russoCapri.service.FrameFetchProduct'
+        attributes 'Main-Class': 'com.shangpin.iog.russoCapri.StartUp'
    //     attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
