--- a/russoCapri-stock/src/main/resources/conf.properties
+++ b/russoCapri-stock/src/main/resources/conf.properties
@@ -1,4 +1,7 @@
 supplierId=2016030701799
-url=http://82.185.221.164/ws_sito/ws_sito_p15.asmx/
+#url=http://82.185.221.164/ws_sito/ws_sito_p15.asmx/
+url=http://82.185.221.164:8580/ws_sito/ws_sito_p15.asmx/
+username=at98w-IIS
+password=Polo2012
 jobsSchedule=0 48 0/1 * * ? 
 time=5400000
