--- a/galiano/build.gradle
+++ b/galiano/build.gradle
@@ -21,30 +21,10 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib, copyResources
-//    , copyResources
-//    exclude ("**/*.properties")
-//    from {
-//        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    dependsOn copyToLib, copyResources,dependsClassPath
 
-//    }
-
-    def manifestCp = configurations.compile.files.collect  {
-
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
-
-//    def mainfestPropertyCp = new File(propertyPath).listFiles().collect {
-//        File file = it
-//        println it.name
-//        "conf/${file.name}"
-//    }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.galiano.Startup'
-//        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-
-        attributes 'Class-Path': '. ' + manifestCp
     }
 }
