--- a/export-product/build.gradle
+++ b/export-product/build.gradle
@@ -11,7 +11,9 @@ dependencies {
 			"commons-net:commons-net:3.3",
          	"commons-dbcp:commons-dbcp:1.4",
          	"org.jdom:jdom:2.0.2",
+         	"net.sourceforge.javacsv:javacsv:2.0",
     )
+    compile group: 'org.apache.poi', name: 'poi', version: '3.15-beta2'
     compile group: 'org.apache.ant', name: 'ant', version: '1.7.1'
     
     testCompile group: 'junit', name: 'junit', version: '4.11'
