--- a/revolve-stock/src/main/resources/conf.properties
+++ b/revolve-stock/src/main/resources/conf.properties
@@ -1,7 +1,8 @@
-url=http://52.79.191.130/shangping/feed/products
-supplierId=201605101521
+url=http://52.79.155.120/shangping/feed/products
+supplierId=2016051201891
 time=5400000
 day=90
 picpath=
-filepath=/usr/local/appstock/revolve/
-jobsSchedule=0 0 0/1 * * ? 
+filepath=/usr/local/appstock/revolve
+jobsSchedule=20 45 0/1 * * ? 
+time=5400000
