--- a/studio69-stock/src/main/resources/conf.properties
+++ b/studio69-stock/src/main/resources/conf.properties
@@ -1,4 +1,4 @@
-supplierId=201602011720
+supplierId=2016080901915
 url=http://studio69.atelier98.net/api_studio69/api_studio69.asmx/
 username=SHANGPIN
 password=2MWWKgNSxgf
