--- a/project-mq/src/main/resources/conf.properties
+++ b/project-mq/src/main/resources/conf.properties
@@ -1,7 +1,7 @@
 
-host=backup.fenix.mc.it
-port=21
-username=
-password=
-virtualHost=
-concurrentConsumerNums=3
+host=@db.rabbitMq.host@
+port=@db.rabbitMq.port@
+username=@db.rabbitMq.username@
+password=@db.rabbitMq.password@
+virtualHost=@db.rabbitMq.virtualHost@
+concurrentConsumerNums=@db.rabbitMq.concurrentConsumerNums@
